chore: update demo pages & update translation

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,1 +1,6 @@
-{}
+{
+  "translation.en": "English-de",
+  "translation.de": "German-de",
+  "translation.zh": "Chinese-de",
+  "read_some_feature": "Read Some Feature-de"
+}
